--- a/styles/index.css
+++ b/styles/index.css
@@ -27,7 +27,7 @@ body {
 }
 
 section {
-  padding-bottom: 6rem;
+  padding: 3.75rem 0;
 }
 
 img {
@@ -51,7 +51,7 @@ h5,
 h6,
 p {
   margin-top: 0;
-  margin-bottom: 1em;
+  margin-bottom: 0.85em;
 }
 
 h1 {
@@ -78,12 +78,32 @@ h6 {
   line-height: 1.5625em;
 }
 
+.text-body-2 {
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  letter-spacing: 0.0156em;
+}
+
+.text-caption {
+  font-weight: 300;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0.025em;
+}
+
 .text--center {
   text-align: center;
 }
 
 .text--orange {
   color: var(--clr-orange-500);
+}
+
+@media (max-width: 749px) {
+  .text--bold-xs {
+    font-weight: 700;
+  }
 }
 
 /* UTILITY */
@@ -99,7 +119,7 @@ h6 {
 
 @media (max-width: 749px) {
   .container-xs {
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
   }
 }
@@ -107,10 +127,11 @@ h6 {
 /* BUTTONS */
 
 .btn {
+  display: inline-block;
   font-size: var(--fs, 1.125rem);
   font-weight: bold;
-  letter-spacing: 0.0469em;
-  padding: 0.8em 1em;
+  letter-spacing: 0.04em;
+  padding: var(--p);
   border-radius: 200px;
   color: var(--fg, var(--clr-white));
   background: var(--bg, var(--clr-orange-500));
@@ -119,6 +140,11 @@ h6 {
 
 .btn--sm {
   --fs: 0.75rem;
+  --p: 0.8em 1em;
+}
+
+.btn--l {
+  --p: 0.6em 2.5em;
 }
 
 .btn--outlined {
@@ -146,6 +172,12 @@ h6 {
   margin: 0 2em;
   border-left: 2px solid var(--clr-gray);
   height: 50px;
+}
+
+.horizontal-line {
+  margin: 1.5em auto;
+  border-top: 1px solid var(--clr-gray);
+  width: 50px;
 }
 
 /* HEADER */
@@ -192,16 +224,43 @@ header {
   }
 }
 
+/* INDICATOR */
+
+.indicator {
+  margin: 0 auto;
+}
+
+.indicator > a::after {
+  content: " ";
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  margin: 0.25em;
+  border-radius: 100px;
+  background: var(--clr-orange-500);
+}
+
 /* HERO */
 
 .hero {
+  padding-top: 0;
+}
+
+.hero-content > * + * {
+  margin-top: 30px;
 }
 
 /* FEATURES */
 
+.features {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 .features-content-slider {
   width: 100%;
   padding: 1rem 0 1rem 10%;
+  margin: 1rem 0;
   display: flex;
   overflow-x: auto;
 }
@@ -233,6 +292,13 @@ header {
   fill: var(--clr-orange-500);
 }
 
+/* BACKOFFICE */
+
+.backoffice-slider > img {
+  margin: 0 auto;
+  margin-bottom: 1rem;
+}
+
 /* TESTIMONIALS */
 
 .testimonials-content {
@@ -251,6 +317,10 @@ header {
   -webkit-overflow-scrolling: touch;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
+}
+
+.testimonials-cards::-webkit-scrollbar {
+  display: none;
 }
 
 .testimonial {
@@ -273,3 +343,28 @@ header {
 #testimonial-3 {
   opacity: 0;
 } */
+
+.comillas-svg {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 1rem;
+  fill: var(--clr-orange-500);
+}
+
+/* FOOTER */
+
+footer {
+  padding: 1.5rem 0;
+  background: var(--clr-black);
+  color: var(--clr-white);
+  border-top-right-radius: 60px;
+}
+
+footer > .text-body-2:hover {
+  color: var(--clr-orange-500);
+}
+
+#logo-v-svg {
+  height: 32px;
+  margin-bottom: 2.5rem;
+}
