--- a/styles/index.css
+++ b/styles/index.css
@@ -26,6 +26,11 @@ body {
   background: var(--clr-white);
 }
 
+main {
+  position: relative;
+  z-index: 500;
+}
+
 section {
   padding: 3.75rem 0;
 }
@@ -183,7 +188,8 @@ h6 {
 /* HEADER */
 
 header {
-  position: relative;
+  position: fixed;
+  width: 100%;
   height: 5rem;
   padding: 0 1.5rem;
   display: flex;
@@ -364,10 +370,12 @@ header {
 /* FOOTER */
 
 footer {
+  position: relative;
   padding: 1.5rem 0;
   background: var(--clr-black);
   color: var(--clr-white);
   border-top-right-radius: 60px;
+  z-index: 1001;
 }
 
 footer > .text-body-2:hover {
@@ -377,4 +385,11 @@ footer > .text-body-2:hover {
 #logo-v-svg {
   height: 32px;
   margin-bottom: 2.5rem;
+}
+
+/* BACKGROUND */
+
+.background {
+  position: absolute;
+  z-index: 1;
 }
