--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 :root {
-  --spacer: 1rem;
+  --spacer: 1.5rem;
 
   --clr-orange-500: #ff6500;
   --clr-black: #101010;
@@ -55,14 +55,18 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
-  margin-bottom: 0.85em;
+  margin: 0;
 }
 
 h1 {
   font-weight: 400;
   font-size: clamp(2.125rem, 10vw, 5.375rem);
   letter-spacing: 0.0156em;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: clamp(1.5rem, 5vw, 3rem);
 }
 
 h3 {
@@ -113,6 +117,14 @@ h6 {
 
 /* UTILITY */
 
+.flow-content > * + * {
+  margin-top: var(--flow-space, calc(var(--spacer) * 1.25));
+}
+
+.flow-content--large {
+  --flow-space: 3rem;
+}
+
 .split {
   display: flex;
   flex-direction: column;
@@ -125,7 +137,8 @@ h6 {
 @media (max-width: 749px) {
   .container-xs {
     width: 85%;
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
@@ -252,8 +265,8 @@ header {
   padding-top: 0;
 }
 
-.hero-content > * + * {
-  margin-top: 30px;
+.hero-image {
+  align-self: flex-end;
 }
 
 /* FEATURES */
@@ -261,9 +274,7 @@ header {
 .features {
   display: flex;
   flex-direction: column-reverse;
-}
-
-.features-content-slider {
+  padding-bottom: 0;
 }
 
 .features-cards {
@@ -309,12 +320,20 @@ header {
 
 /* BACKOFFICE */
 
+.backoffice > h2 {
+  font-size: 1.25rem;
+}
+
 .backoffice-slider > img {
   margin: 0 auto;
   margin-bottom: 1rem;
 }
 
 /* TESTIMONIALS */
+
+.testimonials {
+  padding-bottom: 0;
+}
 
 .testimonials-content {
   width: 70%;
@@ -392,4 +411,20 @@ footer > .text-body-2:hover {
 .background {
   position: absolute;
   z-index: 1;
+}
+
+/* WHATSAPP */
+
+.whatsapp {
+  position: fixed;
+  z-index: 1500;
+  bottom: var(--spacer);
+  right: var(--spacer);
+  opacity: 0;
+  transition: 1s ease opacity;
+}
+
+#whatsapp-svg {
+  width: 56px;
+  height: 56px;
 }
