--- a/styles/index.css
+++ b/styles/index.css
@@ -448,6 +448,65 @@ header {
   height: 24px;
   fill: var(--clr-orange-500);
 }
+
+@media (min-width: 750px) {
+  .testimonials-content {
+    width: 100%;
+    background: none;
+    box-shadow: none;
+    overflow: visible;
+  }
+  .testimonial-slider {
+    width: 92%;
+    max-width: 1150px;
+    margin: 0 auto;
+    padding: 2rem 1rem;
+    display: flex;
+    align-items: flex-start;
+  }
+  .testimonial {
+    position: relative;
+    flex: 1 1 0px;
+    padding: 1.5em 1.5em 2.2em 1.5em;
+    background: white;
+    border-radius: 10px;
+    box-shadow: var(--shadow-8dp);
+  }
+  #testimonial-2,
+  #testimonial-3 {
+    margin-left: 3rem;
+  }
+  #testimonial-1 {
+    margin-top: 75px;
+  }
+  #testimonial-1::before {
+    display: block;
+    position: absolute;
+    content: " ";
+    background: url("../assets/img/Miscelanea.svg");
+    background-size: 75px 75px;
+    width: 75px;
+    height: 75px;
+    top: -1.5rem;
+    left: -1.5rem;
+    z-index: -1;
+  }
+  #testimonial-3 {
+    margin-top: 85px;
+  }
+  #testimonial-3::after {
+    display: block;
+    position: absolute;
+    content: " ";
+    background: url("../assets/img/Miscelanea.svg");
+    background-size: 75px 75px;
+    transform: rotate(180deg);
+    width: 75px;
+    height: 75px;
+    bottom: -1.5rem;
+    right: -1.5rem;
+  }
+}
 /* #endregion */
 
 /* --- FOOTER --- */
