--- a/styles/index.css
+++ b/styles/index.css
@@ -34,6 +34,7 @@ body {
   color: var(--clr-black);
   font-family: "Lato", sans-serif;
   background: var(--clr-white);
+  overflow: hidden;
 }
 
 main {
@@ -248,6 +249,22 @@ h6 {
 }
 /* #endregion */
 
+/* --- LOADING --- */
+/* #region */
+
+.loading {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: 2000;
+  background: var(--clr-orange-500);
+  padding: 5em;
+  color: var(--clr-white);
+  transition: opacity 1s;
+}
+
+/* #endregion */
+
 /* --- HEADER --- */
 /* #region */
 
@@ -308,10 +325,27 @@ header {
   padding-top: 0;
 }
 
+.hero-content {
+  visibility: hidden;
+}
+
 .hero-image {
+  visibility: hidden;
   align-self: flex-end;
   margin-top: 0;
 }
+
+#hero-tube-svg {
+  position: absolute;
+  background-image: url(../assets/img/tube.png);
+  background-position: left 20px bottom 250px;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+
 
 #hero-1280-img {
   display: none;
