--- a/styles/index.css
+++ b/styles/index.css
@@ -74,7 +74,6 @@ p {
 h1 {
   font-weight: 400;
   font-size: clamp(2.125rem, 10vw, 5.375rem);
-  letter-spacing: 0.0156em;
 }
 
 h2 {
@@ -130,6 +129,10 @@ h6 {
 }
 
 @media (min-width: 750px) {
+  h1 {
+    font-weight: 400;
+    font-size: clamp(2.125rem, 6vw, 5.375rem);
+  }
   .text-caption {
     font-weight: 400;
     font-size: 0.875rem;
@@ -163,7 +166,7 @@ h6 {
   margin: var(--spacer) 0 0 0;
 }
 
-.br--1280 {
+.br--750, .br--1280 {
   display: none;
 }
 
@@ -190,9 +193,11 @@ h6 {
   }
 
   .br--750 {
-    display: none;
+    display: inline;
   }
+}
 
+@media (min-width: 1100px) {
   .br--1280 {
     display: inline;
   }
@@ -334,24 +339,37 @@ header {
   align-self: flex-end;
   margin-top: 0;
   position: relative;
+  width: 100%;
+}
+
+#hero-photo-png {
+  width: 80%;
+  height: 100vw;
+  margin-left: auto;
+  background-image: url(../assets/img/HeroImage.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left 0 top calc(-90px + 5vh);
 }
 
 #hero-tube-png {
   position: absolute;
+  width: 75%;
+  height: 50vw;
+  left: 20%;
   background-image: url(../assets/img/tube.png);
-  background-position: left 20px bottom 250px;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
+  background-size: 150%;
+  background-position: left 0 bottom 0;
   z-index: -1;
 }
 
 #hero-tent-png {
   position: absolute;
-  width: 12rem;
-  height: 12rem;
-  bottom: 3vw;
-  left: -80px;
+  width: 30vw;
+  height: 30vw;
+  bottom: calc(6% + 3vh);
+  left: 5vw;
   background-image: url(../assets/img/Tent.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -359,26 +377,41 @@ header {
   z-index: 1;
 }
 
-#hero-1280-img {
-  display: none;
-}
+/* @media (max-width:900px) and (min-width:400px) */
 
 @media (min-width: 750px) {
   .hero {
     padding-top: 50px;
     align-items: center;
+    justify-content: space-between;
   }
   .hero-content {
-    padding: 100px 0 0 100px;
+    padding: 100px 0 0 10vw;
+    width: 65%;
   }
   .hero-image {
-    width: 50%;
+    width: 35%;
   }
-  #hero-1280-img {
-    display: block;
+  #hero-photo-png {
+    width: 100%;
+    height: 50vw;
+    margin-left: 0;
+    background-position: left 0 bottom 0;
+    background-size: 170%;
   }
-  #hero-mobile-img {
-    display: none;
+  
+  #hero-tube-png {
+    height: 25vw;
+    left: 5%;
+    background-size: 250%;
+  }
+  
+  #hero-tent-png {
+    
+    width: 15vw;
+    height: 15vw;
+    bottom: 7%;
+    left: -6vw;
   }
 }
 /* #endregion */
