--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 :root {
   --spacer: 1.5rem;
 
+  --clr-orange-100: #FFDECD;  
   --clr-orange-500: #ff6600;
   --clr-black: #101010;
   --clr-gray: #e0e0e0;
@@ -236,6 +237,11 @@ h6 {
   --border: var(--border-inverted, var(--clr-orange-500));
 }
 
+.btn--disabled {
+  --bg: var(--clr-orange-100);
+  --border: var(--clr-orange-100);
+}
+
 @media (max-width: 749px) {
   .btn--inverted {
     --color-inverted: var(--clr-white);
@@ -309,6 +315,10 @@ header {
   display: none;
 }
 
+#register-btn-750 {
+  display: none;
+}
+
 @media (min-width: 750px) {
   header {
     padding: 0 3em;
@@ -321,6 +331,12 @@ header {
   #signin-btn,
   #header-hr {
     display: inline-block;
+  }
+  #register-btn {
+    display: none
+  }
+  #register-btn-750 {
+    display: inline-block
   }
 }
 /* #endregion */
@@ -830,4 +846,70 @@ footer a:hover {
   width: 56px;
   height: 56px;
 }
+/* #endregion */
+
+/* --- REGISTER --- */
+/* #region */
+.register-body {
+  display: flex;
+  overflow-y: auto;
+  position: relative;
+  background: url("../assets/img/Background-figure.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 300%;
+}
+
+.register-background {
+  width: 100%;
+  height: 15rem;
+  background: var(--clr-orange-500);
+  position: absolute;
+  z-index: -1;
+}
+
+.register-main {
+  position: relative;
+  background: white;
+  margin: 6rem auto;
+  padding: 3rem 5.625rem;
+  width: 60%;
+  max-width: 720px;
+  text-align: center;
+  background: white;
+  border-radius: 10px;
+  box-shadow: var(--shadow-8dp);
+  z-index: 1;
+}
+
+.register-main > p {
+  margin-top: 2rem;
+}
+
+.register-form-header {
+  margin-bottom: 3.625rem;
+}
+
+#logo-register-svg {
+  width: 120px;
+  height: 46px;
+  fill: var(--clr-orange-500);
+}
+
+.register-checkbox {
+  text-align: left;
+}
+
+.register-form p:last-of-type {
+  font-size: 0.625rem;
+  letter-spacing: 0.025rem;
+  line-height: 1rem;
+  margin: 3.75rem 0 1.25rem 0;
+}
+
+input[type=submit] {
+  font-family: 'Lato', sans-serif;
+  padding: 0.6em 4em
+}
+
 /* #endregion */
