--- a/styles/index.css
+++ b/styles/index.css
@@ -424,7 +424,7 @@ header {
     justify-content: space-between;
   }
   .hero-content {
-    padding: 100px 0 0 10vw;
+    padding: 80px 0 0 10vw;
     width: 65%;
   }
   .hero-image {
@@ -810,7 +810,7 @@ footer a:hover {
 /* #region */
 
 #modal-container {
-  position: fixed;
+  position: absolute;
   z-index: 2000;
   width: 100%;
   height: 100%;
@@ -820,17 +820,11 @@ footer a:hover {
   transition: 0.5s ease opacity;
 }
 
-#logo-modal-svg {
-  width: 120px;
-  height: 46px;
-  fill: var(--clr-orange-500);
-}
-
 .modal-form {
   position: relative;
   width: 87%;
   margin: 1.2rem auto;
-  padding: 3rem 1.5rem;
+  padding: 3rem 1.6rem;
   background: var(--clr-white);
   border-radius: 10px;
   box-shadow: var(--shadow-8dp);
@@ -838,9 +832,20 @@ footer a:hover {
 
 .close-btn {
   position: absolute;
-  top: -1rem;
+  top: 1rem;
   right: 1rem;
   color: var(--clr-orange-500);
+}
+
+.close-button-svg {
+  width: 16px;
+  height: 15px;
+}
+
+@media (max-width: 750px) {
+  .modal-form > .register-form-header > h3 {
+    font-size: 6vw;
+  }
 }
 /* #endregion */
 
@@ -955,20 +960,6 @@ footer a:hover {
   z-index: -1;
 }
 
-.register-main {
-  position: relative;
-  background: white;
-  margin: 6rem auto;
-  padding: 3rem 5.625rem;
-  width: 70%;
-  max-width: 720px;
-  text-align: center;
-  background: white;
-  border-radius: 10px;
-  box-shadow: var(--shadow-8dp);
-  z-index: 1;
-}
-
 .register-main > p {
   margin-top: 2rem;
 }
@@ -977,9 +968,9 @@ footer a:hover {
   margin-bottom: 3.625rem;
 }
 
-#logo-register-svg {
-  width: 120px;
-  height: 46px;
+.logo-register-svg {
+  width: 130px;
+  height: 60px;
   fill: var(--clr-orange-500);
 }
 
@@ -1004,6 +995,22 @@ input[type=submit] {
   font-size: .75rem;
   text-align: left;
   position: absolute;
+}
+
+@media (min-width: 750px) {
+  .register-main {
+    position: relative;
+    background: white;
+    margin: 6rem auto;
+    padding: 3rem 5.625rem;
+    width: 70%;
+    max-width: 720px;
+    text-align: center;
+    background: white;
+    border-radius: 10px;
+    box-shadow: var(--shadow-8dp);
+    z-index: 1;
+  }
 }
 
 /* #endregion */
