--- a/styles/index.css
+++ b/styles/index.css
@@ -458,6 +458,36 @@ header {
 /* --- FEATURES --- */
 /* #region */
 
+.features-img {
+  position: relative;
+  z-index: -1;
+  width: 100%;
+}
+
+.cellphone-mobile-img {
+  width: 100%;
+  height: calc(200px + 100vw);
+  background-image: url(../assets/img/Cellphone.png);
+  background-repeat: no-repeat;
+  background-size: 100vw;
+  background-position: right calc(100vw / 6.2) bottom 0;
+  position: relative;
+  z-index: 3;
+  margin-top: calc(-50px - 25vw);
+}
+
+.cellphone-slider-container {
+  position: absolute;
+  margin: 0 auto;
+  width: 40%;
+  right: 30vw;
+  bottom: -25px;
+}
+
+.cellphone-slides-container {
+ 
+}
+
 .features-content {
   position: relative;
 }
@@ -473,14 +503,6 @@ header {
   left: -4rem;
   z-index: 1;
 }
-
-#cellphone-1280-img {
-  display: none;
-}
-
-/* .features {
-  padding-bottom: 0;
-} */
 
 .features-slider {
   margin: 0 auto;
@@ -527,6 +549,34 @@ header {
 }
 
 @media (min-width: 750px) {
+  .features-img {
+    width: 35%;
+  }
+
+  .features-content {
+    width: 55%;
+  }
+
+  .cellphone-mobile-img {
+    width: 100%;
+    height: calc(200px + 85vw);
+    background-image: url(../assets/img/Cellphone.png);
+    background-repeat: no-repeat;
+    background-size: 70vw;
+    background-position: right 0 bottom 0;
+    position: relative;
+    z-index: 3;
+    margin-top: calc(-50px - 25vw);
+  }
+
+  .cellphone-slider-container {
+    position: absolute;
+    margin: 0;
+    width: 65%;
+    right: calc(100vw / 10);
+    bottom: 25px;
+  }
+
   .features-content {
     margin-top: 4rem;
   }
@@ -553,26 +603,23 @@ header {
     display: none;
   }
 
-  #cellphone-mobile-img {
-    display: none;
-  }
-  #cellphone-1280-img {
-    display: block;
-    margin-top: -100px;
-  }
-
-  .features-image {
-    flex-shrink: 0;
-  }
-
-  .features-content {
-    width: 50%;
-  }
-
-  /* .feature {
-    min-width: 320px;
-  } */
 }
+
+@media (min-width: 1000px) {
+  .cellphone-mobile-img {
+    width: 100%;
+    height: 750px;
+    background-image: url(../assets/img/Cellphone.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: right 0 bottom 0;
+    position: relative;
+    z-index: 3;
+    margin-top: -15vw;
+  }
+}
+
+
 /* #endregion */
 
 /* --- BACKOFFICE --- */
