--- a/styles/index.css
+++ b/styles/index.css
@@ -233,6 +233,11 @@ h6 {
   border: 2px solid var(--border, var(--clr-orange-500));
 }
 
+.btn:hover {
+  background: var(--fg, none);
+  color: var(--bg, var(--clr-orange-500));
+}
+
 .btn--sm {
   --fs: 0.75rem;
   --p: 0.8em 1em;
@@ -244,7 +249,7 @@ h6 {
 
 .btn--outlined {
   --fg: var(--color-inverted, var(--clr-orange-500));
-  --bg: none;
+  --bg: var(--bg-inverted, var(--clr-white));
   --border: var(--border-inverted, var(--clr-orange-500));
 }
 
@@ -257,6 +262,7 @@ h6 {
   .btn--inverted {
     --color-inverted: var(--clr-white);
     --border-inverted: var(--clr-white);
+    --bg-inverted: var(--clr-orange-500);
   }
   .btn--block {
     --fs: 0.9375rem;
@@ -616,6 +622,20 @@ header {
     position: relative;
     z-index: 3;
     margin-top: -15vw;
+  }
+}
+
+@media (min-width: 1900px) {
+  .cellphone-mobile-img {
+    width: 100%;
+    height: 1000px;
+    background-image: url(../assets/img/Cellphone.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: right 0 bottom 0;
+    position: relative;
+    z-index: 3;
+    margin-top: -20vw;
   }
 }
 
@@ -998,10 +1018,13 @@ footer a:hover {
     from { background-position:-4000px 850px; }
     to  { background-position: 500px -3650px; }
   } */
-  /* @keyframes animatedBackground3 {
-    from { background-position:-4000px 850px; }
-    to  { background-position: 500px -3650px; }
-  } */
+  @keyframes animatedBackground3 {
+    from { background-position:-1750px 250px; }
+    to  { background-position: 250px -1750px; }
+  }
+  .background2::before {
+    background-position: -3000px 0px;
+  }
 }
 /* #endregion */
 
