--- a/styles/index.css
+++ b/styles/index.css
@@ -935,9 +935,9 @@ footer a:hover {
 	height: 100%;
   background: url("../assets/img/Background-figure.svg");
   background-repeat: no-repeat;
-  background-position: -4200px 2700px;
-  /* background-position: 1100px -2600px; */
-  animation: animatedBackground 5s linear 0s infinite;
+  /* background-position: -4200px 2700px; */
+  background-position: 50% 10%;
+  /* animation: animatedBackground 5s linear 0s infinite; */
 }
 
 @keyframes animatedBackground {
