--- a/styles/index.css
+++ b/styles/index.css
@@ -494,36 +494,6 @@ header {
   }
 }
 
-/* .features-img {
-  position: relative;
-  z-index: -1;
-  width: 100%;
-}
-
-.cellphone-mobile-img {
-  width: 100%;
-  height: calc(200px + 100vw);
-  background-image: url(../assets/img/Cellphone.png);
-  background-repeat: no-repeat;
-  background-size: 100vw;
-  background-position: right calc(100vw / 6.2) bottom 0;
-  position: relative;
-  z-index: 3;
-  margin-top: calc(-50px - 25vw);
-}
-
-.cellphone-slider-container {
-  position: absolute;
-  margin: 0 auto;
-  width: 40%;
-  right: 30vw;
-  bottom: -25px;
-}
-
-.cellphone-slides-container {
- 
-} */
-
 .features-content {
   position: relative;
 }
@@ -585,35 +555,29 @@ header {
 }
 
 @media (min-width: 750px) {
-  /* .features-img {
+
+  .features-img {
     width: 35%;
+  }
+
+  .cellphone-mobile-img {
+    width: 35%;
+    height: 55vw;
+    background-position: 100% 100%;
+    margin-top: -10vw;
+  }
+
+  .cellphone-slider-container {
+    width: 50%;
+    margin: 5.5vw 0 50px 32.5%;
+  }
+
+  button[type=button][data-action=stop] {
+    display: none;
   }
 
   .features-content {
     width: 55%;
-  }
-
-  .cellphone-mobile-img {
-    width: 100%;
-    height: calc(200px + 85vw);
-    background-image: url(../assets/img/Cellphone.png);
-    background-repeat: no-repeat;
-    background-size: 70vw;
-    background-position: right 0 bottom 0;
-    position: relative;
-    z-index: 3;
-    margin-top: calc(-50px - 25vw);
-  }
-
-  .cellphone-slider-container {
-    position: absolute;
-    margin: 0;
-    width: 65%;
-    right: calc(100vw / 10);
-    bottom: 25px;
-  } */
-
-  .features-content {
     margin-top: 4rem;
   }
 
@@ -642,31 +606,10 @@ header {
 }
 
 @media (min-width: 1000px) {
-  .cellphone-mobile-img {
-    width: 100%;
-    height: 750px;
-    background-image: url(../assets/img/Cellphone.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: right 0 bottom 0;
-    position: relative;
-    z-index: 3;
-    margin-top: -15vw;
-  }
+  
 }
 
 @media (min-width: 1900px) {
-  .cellphone-mobile-img {
-    width: 100%;
-    height: 1000px;
-    background-image: url(../assets/img/Cellphone.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: right 0 bottom 0;
-    position: relative;
-    z-index: 3;
-    margin-top: -20vw;
-  }
 }
 
 
