--- a/styles/index.css
+++ b/styles/index.css
@@ -457,9 +457,10 @@ header {
     justify-content: space-between;
   }
   .hero-content {
-    padding: 80px 0 0 10vw;
+    padding: 2vw 0 0 calc(25vw  - 220px);
     width: 65%;
   }
+
   .hero-image {
     width: 35%;
   }
@@ -479,11 +480,29 @@ header {
   }
   
   #hero-tent-png {
-    
     width: 15vw;
     height: 15vw;
     bottom: 7%;
     left: -6vw;
+  }
+}
+
+@media (min-width: 1500px) {
+
+  .hero-content {
+    width: 55%;
+  }
+
+  .hero-image {
+    width: 45%;
+  }
+
+  #hero-photo-png {
+    
+    height: 50vw;
+    margin-left: 0;
+    background-position: left 0 bottom 5vw;
+    background-size: 130%;
   }
 }
 /* #endregion */
